--- a/marine/templates/marine/product/product_alert_print.html
+++ b/marine/templates/marine/product/product_alert_print.html
@@ -74,7 +74,7 @@
                 {% endif %}
 
                 {% if user.is_staff %}
-                <th>Quantité en GP_Annexe_1</th>
+                <th>Quantité en GP1</th>
                 <th>Quantité en BM2</th>
                 <th>Quantité en BM3</th>
                 {% else %}
