--- a/marine/templates/marine/product/product_list.html
+++ b/marine/templates/marine/product/product_list.html
@@ -29,7 +29,7 @@
                 {% endif %}
 
                
-                <th id='qd1' class="sales__table__data">Quantité en GP Annexe 1</th>
+                <th id='qd1' class="sales__table__data">Quantité en GP1</th>
                 
                 
                 <!--- <th id='qd' class="sales__table__data">Quantité en boutique</th> --->
