--- a/marine/templates/marine/sale/delivery_print.html
+++ b/marine/templates/marine/sale/delivery_print.html
@@ -27,7 +27,7 @@
        
     <div class="facture">
         <div class="facture__logo">
-            <img src="{% static 'marine/img/GP_Annexe_1.png' %}" alt="" style="width: 300px; height: 150px;">
+            <img src="{% static 'marine/img/GP1.png' %}" alt="" style="width: 300px; height: 150px;">
             <img src="{% static 'marine/img/bm2.png' %}" alt="" style="width: 300px; height: 150px;">
           </div>
         <div class="facture__table-container facture__first">
